# skills_hub

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: __init__.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  install_scripts.py  router.py
backend/app/api/v1/: __init__.py  contributions.py  install.py  monitor.py  publish.py  reviews.py  scan.py  search.py  skills.py  users.py
backend/app/dependencies/: __init__.py  auth.py  database.py
backend/app/models/: __init__.py  contribution.py  publication.py  review.py  skill.py  skill_version.py  user.py
backend/app/schemas/: __init__.py  contribution.py  response.py  review.py  scan.py  skill.py  user.py
backend/app/services/: __init__.py  contribution_service.py  install_service.py  monitor_service.py  notify_service.py  review_service.py  scan_service.py  search_service.py  skill_service.py  user_service.py
backend/app/utils/: logger.py  security.py  validators.py
cli/: README.md  setup.py
cli/skillhub_cli/: __init__.py  main.py
cli/skillhub_cli/commands/: __init__.py  install.py  publish.py  (+1 more)
docs/api/: index.md
docs/architecture/: index.md
docs/deployment/: index.md
docs/user-guide/: index.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.js
scripts/: backup.sh  deploy.sh  migrate.sh
(+21 files in other folders)
